<resources>
    <string name="welcome_to_ucoin">Welcome to uCoin Android app !</string>
    <string name="title_activity_account">Account</string>
    <string name="connecting_dots">Connecting…</string>
    <string name="not_connected">Not connected</string>
    <string name="connected_error">Unable to connect (%s)</string>
    <string name="connected_label"><![CDATA[You are connected to free currency \'<b/>%s</b>\'.]]></string>
    <string name="connection_details">Successfully connected to a free currency.\n\tCurrency name: %1$s\n\tInitial UD: %2$s\n\tUD interval: %3$s</string>
    <string name="cancelled">Cancelled</string>
    <string name="failed">Failed</string>
    <string name="no_results">No results</string>
    <string name="open_drawer">Open the navigation drawer</string>
    <string name="close_drawer">Close the navigation drawer</string>
    <string name="source_wallet">Source Wallet</string>
    <string name="receiver_uid">Receiver uid</string>
    <string name="amount">Amount</string>
    <string name="UD">UD</string>
    <string name="universal_dividende">Universal Dividende</string>
    <string name="mutual_credit">Mutual Credit</string>
    <string name="unit_coins_label">coins</string>
    <string name="wallet">Wallet</string>
    <string name="comment_hint">Comment</string>
    <string name="transactions">Transactions</string>
    <string name="transfer">Transfer</string>
    <string name="generate_seed">Generate seed</string>
    <string name="sign">Sign</string>
    <string name="self">Self</string>
    <string name="revoke">Revoke</string>
    <string name="search">Search</string>
    <string name="sign_in">Sign in</string>
    <string name="dev">Dev</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="copy">Copy</string>
    <string name="add">Add</string>
    <string name="CANCEL">CANCEL</string>
    <string name="OK">OK</string>
    <string name="join">Join</string>
    <string name="delete">Delete</string>
    <string name="remove_contact">Remove contact</string>
    <string name="remove">Remove</string>
    <string name="lookup">Lookup</string>
    <string name="node_address">Node address</string>
    <string name="node_port">Node port</string>
    <string name="rules">Rules</string>
    <string name="list_rules">Rules of Currency</string>
    <string name="growth">Growth</string>
    <string name="currency">Currency</string>
    <string name="no_currency">No currency</string>
    <string name="no_transfer">No transfer</string>
    <string name="currencies">Currencies</string>
    <string name="members">Members</string>
    <string name="selected_currency">Selected currency</string>
    <string name="selected_unit">Selected unit</string>
    <string name="enter_node_info">Enter node info</string>
    <string name="enter_remote_address">Enter remote address</string>
    <string name="add_node">Add node</string>
    <string name="dialog_text_add_node">Please enter either a full qualified domain name, an IPv4, or an IPv6 address, and a port number</string>
    <string name="identity">Identity</string>
    <string name="uid_or_public_key">UID or public key</string>
    <string name="user_id">User ID</string>
    <string name="identity_icon">Identity icon</string>
    <string name="certified_by">Certified by</string>
    <string name="certifiers_of">Certifiers of</string>
    <string name="registration_date">Registration Date</string>
    <string name="signature">Signature</string>
    <string name="public_key">Public key</string>
    <string name="login">Login</string>
    <string name="next">Next</string>
    <string name="email_password_salt">Email (or password salt)</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_password">Confirm password</string>
    <string name="pin_code">PIN code</string>
    <string name="add_account">Add account</string>
    <string name="salt">Salt</string>
    <string name="salt_instructions">Salt: We advice you to choose your personal e-mail as value for this
        field. But you can put any other value: it only has to carry enough entropy to avoid key
        collision. Typically, your personal e-mail is a good choice, added to the fact it is easy to
        remember.</string>
    <string name="password_instructions">Password: Choose a very strong password, so no one
        can find it. This password can\'t be changed thereafter, so choose it carefully. The password can\'t be
    recovered, don\'t loose it</string>
    <string name="test">Test</string>
    <string name="login_too_short">This login is too short</string>
    <string name="email_address_invalid">This email address is invalid</string>
    <string name="password_too_short">This password is too short</string>
    <string name="login_incorrect">This login is incorrect</string>
    <string name="password_incorrect">This password is incorrect</string>
    <string name="field_required">This field is required</string>
    <string name="uid_instructions">User ID: If you choose an UID which is already used inside a community, you won\'t be able to join this community. So ensure not to collide with someone else\'s UID.</string>
    <string name="uid_cannot_be_empty">UID cannot be empty</string>
    <string name="salt_cannot_be_empty">Salt cannot be empty</string>
    <string name="alias_cannot_be_empty">Alias cannot be empty</string>
    <string name="password_cannot_be_empty">Password cannot be empty</string>
    <string name="confirm_password_cannot_be_empty">Confirm password cannot be empty</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="currency_added">Currency added</string>
    <string name="invalid_peer_address">Invalid peer address</string>
    <string name="invalid_peer_port">Invalid peer port</string>
    <string name="wallets">Wallets</string>
    <string name="create_new">Create new</string>
    <string name="add_wallet">Add wallet</string>
    <string name="no_wallet">No wallet</string>
    <string name="sources">Sources</string>
    <string name="no_source">No source</string>
    <string name="alias_hint">local alias</string>
    <string name="alias">Alias</string>
    <string name="add_currency">Add currency</string>
    <string name="ud0">ud0</string>
    <string name="sig_delay">sig_delay</string>
    <string name="sig_validity">sig_validity</string>
    <string name="sig_qty">sig_qty</string>
    <string name="sig_woT">sig_woT</string>
    <string name="ms_validity">ms_validity</string>
    <string name="step_max">step_max</string>
    <string name="median_time_blocks">median_time_blocks</string>
    <string name="avg_gen_time">avg_gen_time</string>
    <string name="dt_diff_eval">dt_diff_eval</string>
    <string name="blocks_rot">blocks_rot</string>
    <string name="percent_rot">percent_rot</string>
    <string name="dt">dt</string>
    <string name="dividend">dividend</string>
    <string name="transaction">transaction</string>
    <string name="type">type</string>
    <string name="fingerprint">fingerprint</string>
    <string name="number">number</string>
    <string name="seconds">seconds</string>
    <string name="received">received</string>
    <string name="no_peer">no peer</string>
    <string name="add_peer">Add peer</string>
    <string name="block">block</string>
    <string name="peer_not_match_currency">This peer does not match the currency</string>
    <string name="delete_wallet">delete wallet</string>
    <string name="create_uid">create UID</string>
    <string name="enter_identity_info">Enter identity info</string>
    <string name="uid_hint">UID</string>
    <string name="certifiers">certifiers</string>
    <string name="certified">certified</string>
    <string name="add_identity">Add identity</string>
    <string name="no_member">No member</string>
    <string name="no_certification">No certification</string>
    <string name="member">Member</string>
    <string name="median_time">Median time</string>
    <string name="generating_keys">Generating keys...</string>
    <string name="empty_wallet">Empty wallet</string>
    <string name="export_db">Export DB</string>
    <string name="wallet_already_exists">Wallet already exists</string>
    <string name="port_cannot_be_empty">Port cannot be empty</string>
    <string name="comment">Comment</string>
    <string name="hash">hash</string>
    <string name="sent">Sent</string>
    <string name="no_transactions">No transactions</string>
    <string name="receiver_wallet">Receiver Wallet</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="qr_code">QR code</string>
    <string name="contact">Contact</string>
    <string name="write">Write</string>
    <string name="insufficient_funds">Insufficient funds</string>
    <string name="amount_is_empty">Amount is empty</string>
    <string name="sync">Sync</string>
    <string name="close">Close</string>
    <string name="show_qrcode">Show QR code</string>
    <string name="quantitative_amount">quantitative amount</string>
    <string name="relative_amount_then">relative amount then</string>
    <string name="relative_amount_now">relative amount now</string>
    <string name="date">Date</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="second">Second</string>
    <string name="h">h</string>
    <string name="m">min</string>
    <string name="s">s</string>
    <string name="milli_second">ms</string>
    <string name="day_of_week">Day of week</string>
    <string name="uid_colon">UID :</string>
    <string name="name_colon">Name :</string>
    <string name="publickey_colon">Public key :</string>
    <string name="SUN">SUN</string>
    <string name="MON">MON</string>
    <string name="TUE">TUE</string>
    <string name="WED">WED</string>
    <string name="THU">THU</string>
    <string name="FRI">FRI</string>
    <string name="SAT">SAT</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="UNK">UNK</string>
    <string name="new_wallet">New wallet</string>
    <string name="no_membership">No membership</string>
    <string name="membership">Membership</string>
    <string name="expires_on">Expires on</string>
    <string name="expired">Expired</string>
    <string name="state">State</string>
    <string name="renew">renew</string>
    <string name="no_currencies">No currencies</string>
    <string name="contacts">Contacts</string>
    <string name="blocks">Blocks</string>
    <string name="peers">Peers</string>
    <string name="no_blocks">No blocks</string>
    <string name="leave">Leave</string>
    <string name="no_ud">No U.D.</string>
    <string name="no_contact">No contact</string>
    <string name="add_contact">Add contact</string>
    <string name="search_identity">Search identity</string>
    <string name="name">Name</string>
    <string name="select_self_certification">Select self-certification</string>
    <string name="currency_already_exists">Currency already exists</string>
    <string name="loading_currency">Loading currency...</string>
    <string name="peer_already_exists">Peer already exists</string>
    <string name="with_identity">With Identity</string>
    <string name="without_identity">Without Identity</string>
</resources>