<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="8dp"
    tools:context=".AddAccountActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/add_wallet"
        android:textSize="@dimen/abc_text_size_display_1_material" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.22"
            android:text="@string/alias" />

        <EditText
            android:id="@+id/alias"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.78"
            android:hint="@string/alias_hint"
            android:imeOptions="actionNext"
            android:inputType="textNoSuggestions"
            android:singleLine="true"
            android:textSize="@dimen/abc_text_size_body_2_material" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.22"
            android:text="@string/salt" />

        <EditText
            android:id="@+id/salt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.78"
            android:hint="@string/salt"
            android:imeOptions="actionNext"
            android:inputType="textNoSuggestions"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:singleLine="true"
            android:textSize="@dimen/abc_text_size_body_2_material" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.22"
            android:text="@string/password" />

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.78"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:singleLine="true"
            android:textSize="@dimen/abc_text_size_body_2_material" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.22"
            android:text="@string/confirm" />

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.78"
            android:hint="@string/confirm_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:singleLine="true"
            android:textSize="@dimen/abc_text_size_body_2_material" />
    </LinearLayout>

    <TextView
        android:id="@+id/salt_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salt_instructions"
        android:textSize="@dimen/abc_text_size_body_2_material"
        android:visibility="gone" />


    <TextView
        android:id="@+id/password_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_instructions"
        android:textSize="@dimen/abc_text_size_body_2_material"
        android:visibility="gone" />


</LinearLayout>