<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ProgressBar
        android:id="@+id/progressbar"
        style="?android:attr/progressBarStyleInverse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal|center_vertical"
        android:visibility="gone" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:scrollbarStyle="outsideOverlay"
        android:paddingBottom="72dp"
        android:clipToPadding="false" />

    <TextView
        android:id="@id/android:empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:text="@string/no_contact"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/hideable_text_color"
        android:textSize="18sp" />

    <ImageButton
        android:id="@+id/add_contact_button"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_above="@+id/search_identity_button"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/shape_circle_accent"
        android:elevation="4dp"
        android:src="@drawable/ic_person_add_white_24dp"
        android:contentDescription="@string/add_contact"/>

    <ImageButton
        android:id="@+id/search_identity_button"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/shape_circle_accent"
        android:elevation="4dp"
        android:src="@drawable/ic_search_white_24dp"
        android:contentDescription="@string/search_identity"/>
</RelativeLayout>
